# py_load_medgen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  FRD_COMPLIANCE_REPORT.md  FRD_IMPLEMENTATION_MAP.md  FRD_py-load-medgen.md  FTP_README.txt  LICENSE.md  README.md  get_readme.py  mkdocs.yml  pyproject.toml  run-tests.sh
.github/workflows/: ci.yml  docker.yml
docs/: CI_CD_STRATEGY.md  architecture.md  cli.md  extending.md  index.md  reference.md
site/: 404.html  index.html  objects.inv
site/architecture/: index.html
site/cli/: index.html
site/reference/: index.html
site/search/: search_index.json
src/py_load_medgen/: cli.py  downloader.py  logging.py  parser.py  schemas.py
src/py_load_medgen/loader/: base.py  factory.py  postgres.py
src/py_load_medgen/sql/: ddl.py
tests/: conftest.py  test_base_loader.py  test_cli.py  test_delta_load.py  test_downloader.py  test_factory.py  test_integration.py  test_loader.py  test_logging.py  test_metrics.py  test_parser.py  test_parser_edge_cases.py  test_parser_errors.py  test_parser_resilience.py  test_parser_sty.py  test_relationships_load.py  test_sources_load.py
tests/integration/: conftest.py  test_cli.py  test_data.py  test_error_handling.py  test_postgres_loader.py
