[tool.poetry]
name = "py-load-medgen"
version = "0.1.0"
description = "A Python package for scalable, reliable, and high-performance ETL of the NCBI MedGen database."
authors = ["Gowtham Adamane Rao <rao@ohdsi.org>"]
readme = "README.md"
license = "Proprietary"
homepage = "https://github.com/ohdsi/py-load-medgen"
repository = "https://github.com/ohdsi/py-load-medgen"
keywords = ["etl", "ncbi", "medgen", "health", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
packages = [{ include = "py_load_medgen", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
tenacity = "*"
"typing-extensions" = "*"
psycopg = { version = "*", extras = ["binary"], optional = true }

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"
psycopg = { version = "*", extras = ["binary"] }
testcontainers = { version = "*", extras = ["postgres"] }
sqlalchemy = "*"
psycopg2-binary = "*"
pytest-cov = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = { version = "*", extras = ["python"] }

[tool.poetry.extras]
postgres = ["psycopg"]

[tool.poetry.scripts]
py_load_medgen = "py_load_medgen.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "pytest",
    "testcontainers.*",
    "tenacity",
    "psycopg",
    "psycopg.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]